# galo-ioc

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  README_ru.md  pyproject.toml  requirements.py  setup.py
.github/workflows/: publish.yml  test.yml
example/: __main__.py
examples/congratulations_app/: module_names.txt  setup.py
examples/congratulations_service_audit/: setup.py
examples/fastapi_integration/: initdb.sql  module_names.txt  setup.py
examples/loggers/: setup.py
examples/secret_corporation_plugin/: setup.py
galo_ioc/: __init__.py
ioc/: Container.py  FactoryStorage.py  Key.py  __init__.py
ioc/cached/: CachedAsyncFactory.py  CachedFactory.py  __init__.py
ioc/context/: __init__.py
ioc/core/: FactoryContainer.py  FactoryNotFoundException.py  FactoryStorage.py  InvalidFactoryException.py  InvalidFactoryTypeException.py  Key.py  __init__.py
ioc/dict/: DictFactoryContainer.py  DictFactoryStorage.py  __init__.py
ioc/dict_factory_storage/: DictFactoryStorage.py  __init__.py
ioc/function/: __init__.py
ioc/function_factory/: __init__.py
ioc/nested/: NestedFactoryContainer.py  NestedFactoryStorage.py  __init__.py
ioc/nested_factory_storage/: NestedFactoryStorage.py
ioc/singleton/: __init__.py
requirements/: test.txt
scripts/: format.sh  install-dependencies.sh  lint.sh  test-cov-html.sh  test.sh
tests/: __init__.py  ioc_test.py  test_cached_async_factory.py  test_cached_factory.py  test_context.py  test_dict_factory_container.py  test_dict_factory_storage.py  test_function.py  test_function_factory.py  test_ioc.py  test_key.py  test_nested_factory_container.py  test_nested_factory_storage.py  test_singleton.py  test_singleton_factory.py  util.py
(+68 files in other folders)
